# pybind11-template

./: CMakeLists.txt  README.md  setup.py
automobile/: __init__.py
python/: automobile_py.cpp
